--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:bHQANB0cWZGlg2IBUI0AIrt9DJqWiYsbqkjvxaRGzYU=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=PWDPWD8
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=onlineshop
+DB_USERNAME=root
+DB_PASSWORD=PWDPWD8
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -40,6 +40,17 @@ QUEUE_CONNECTION=database
 
 CACHE_STORE=database
 CACHE_PREFIX=
+
+#RAJAONGKIR API
+RAJAONGKIR_API_KEY=qWJnXlM2402d0122fc683e9chOOrdCrn
+RAJAONGKIR_ORIGIN_CITY_ID=3155
+
+#MIDTRANS API
+MIDTRANS_SERVER_KEY=
+MIDTRANS_CLIENT_KEY=
+MIDTRANS_IS_PRODUCTION=false
+MIDTRANS_SANITIZED=true
+MIDTRANS_3DS=true
 
 MEMCACHED_HOST=127.0.0.1
 
